Revision history for perl distribution Mojolicious-Plugin-Webpack

0.07 Not Released
 - Add Cache-Control to response headers
 - Fix passing on arguments using the "webpack" command

0.06 2019-01-13T10:52:34+0900
 - Converted crushinator script to mojo webpack subcommand
   You need to manually remove `which crushinator` if already installed.

0.05 2018-12-27T13:21:34+0900
 - Use terser-webpack-plugin instead of uglifyjs-webpack-plugin

0.04 2018-12-26T13:53:46+0900
 - Fix typo in webpack.custom.js
 - Add M::P::Webpack::Builder to make M::P::Webpack a production shim
 - M::P::Webpack::Builder can install a shim into your application

0.03 2018-12-20T12:50:22+0900
 - Add url_for() method
 - Will migrate assetpack.def from AssetPack into webpack custom config
 - Change webpack to only run when requested
 - Documented how to test your assets

0.02 2018-11-16T19:53:02+0900
 - Fix markup.t

0.01 2018-11-07T15:44:27+0900
 - Will automatically setup webpack config files
 - Can process CSS, JavaScript, Sass and Vue
 - Can extend the webpack config file
 - Add automatic installation of node modules
 - Add crushinator for development